--- a/index.html
+++ b/index.html
@@ -7,13 +7,27 @@
     <title>Projeto Redes Sociais</title>
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css" />
   </head>
   <body>
     <main>
-      <section id="telefone"></section>
+      <section id="telefone">
+        <iframe src="home.html" frameborder="0" name="tela" id="tela">
+          Seu navegador não é compatível com isso.
+        </iframe>
+      </section>
 
-      <section id="redes-sociais"></section>
+      <section id="redes-sociais">
+        <a href="#" target="tela"
+          ><img src="imagens/logo-home.jpg" alt="home" /></a
+        ><br />
+        <a href="#" target="tela"
+          ><img src="imagens/logo-instagram.jpg" alt="instagram" /></a
+        ><br />
+        <a href="#" target="tela"
+          ><img src="imagens/logo-github.jpg" alt="Github" /></a
+        ><br />
+      </section>
     </main>
   </body>
 </html>
