--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       </section>
 
       <section id="redes-sociais">
-        <a href="#" target="tela"
+        <a href="home.html" target="tela"
           ><img src="imagens/logo-home.jpg" alt="home" /></a
         ><br />
-        <a href="#" target="tela"
+        <a href="instagram.html" target="tela"
           ><img src="imagens/logo-instagram.jpg" alt="instagram" /></a
         ><br />
-        <a href="#" target="tela"
+        <a href="github.html" target="tela"
           ><img src="imagens/logo-github.jpg" alt="Github" /></a
         ><br />
       </section>
