Fim do projeto das redes sociais

--- a/github.html
+++ b/github.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/style-imagens.css" />
   </head>
   <body>
-    <img src="imagens/tela-github.jpg" alt="tela-github" />
+    <img src="imagens/github.jpeg" alt="tela-github" />
 
     <a href="https://github.com/cristovao0" target="_blank">ACESSE</a>
   </body>
