--- a/instagram.html
+++ b/instagram.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="estilos/style-imagens.css" />
   </head>
   <body>
-    <img src="imagens/tela-instagram.jpg" alt="tela-instagram" />
+    <img src="imagens/instagram.jpeg" alt="tela-instagram" />
 
-    <a href="https://www.instagram.com/wonderwalll_cris/" target="_blank">ACESSE</a>
+    <a href="https://www.instagram.com/wonderwalll_cris/" target="_blank"
+      >ACESSE</a
+    >
   </body>
 </html>
