tentando carregar a imagem de outra maneira

--- a/home.html
+++ b/home.html
@@ -6,20 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tela Home</title>
 
-    <style>
-      * {
-        padding: 0px;
-        margin: 0px;
-      }
-
-      body {
-        height: 100vh;
-        width: 100vw;
-        background: url("/imagens/tela-home.jpg") no-repeat top center;
-
-        background-size: cover;
-      }
-    </style>
+    <link rel="stylesheet" href="estilos/style-home.css">
   </head>
   <body></body>
 </html>
