--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <main>
       <section id="telefone">
-        <iframe src="home.html" frameborder="0" name="tela" id="tela">
+        <iframe src="#" frameborder="0" name="tela" id="tela">
           Seu navegador não é compatível com isso.
         </iframe>
       </section>
