--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <body>
     <main>
       <section id="telefone">
-        <iframe src="#" frameborder="0" name="tela" id="tela">
+        <iframe src="home2.html" frameborder="0" name="tela" id="tela">
           Seu navegador não é compatível com isso.
         </iframe>
       </section>
 
       <section id="redes-sociais">
-        <a href="home.html" target="tela"
+        <a href="home2.html" target="tela"
           ><img src="imagens/logo-home.jpg" alt="home" /></a
         ><br />
         <a href="instagram.html" target="tela"
