--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <a href="github.html" target="tela"
           ><img src="imagens/logo-github.jpg" alt="Github" /></a
         ><br />
+        <a href="linkedin.html" target="tela"
+          ><img src="imagens/linkedin-logo.png" alt="linkedin" /></a
+        ><br />
       </section>
     </main>
   </body>
